--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 amqp==1.4.6
 anyjson==0.3.3
+backports.ssl-match-hostname==3.4.0.2
 billiard==3.3.0.19
 blessings==1.6
 bpython==0.14.1
 celery==3.1.17
+certifi==14.5.14
 curtsies==0.1.18
 dj-database-url==0.3.0
 dj-static==0.0.6
@@ -27,13 +29,19 @@ psycopg2==2.6
 pudb==2015.2
 pycrypto==2.6.1
 Pygments==2.0.2
+python-dateutil==2.4.1
 python-openid==2.2.5
 pytz==2014.10
+redis==2.10.3
 requests==2.5.3
 requests-oauthlib==0.4.2
 six==1.9.0
+sockjs-tornado==1.0.1
 sqlparse==0.1.14
 static3==0.5.1
+SwampDragon==0.4.1.2
+tornado==4.1
+tornado-redis==2.4.18
 twilio==3.7.3
 urwid==1.3.0
 Werkzeug==0.10.1
