--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,9 @@ django-bootstrap3==5.1.1
 django-celery==3.1.16
 django-debug-toolbar==1.3.0
 django-extensions==1.5.1
+django-jquery==1.9.1
 django-mailgun==0.2.2
+django-phonenumber-field==0.7.2
 django-toolbelt==0.0.1
 greenlet==0.4.5
 gunicorn==19.3.0
@@ -25,6 +27,7 @@ ipdb==0.8
 ipython==3.0.0
 kombu==3.0.24
 oauthlib==0.7.2
+phonenumbers==7.0.2
 psycopg2==2.6
 pudb==2015.2
 pycrypto==2.6.1
